--- a/scss/components/burger-menu/burger-menu.scss
+++ b/scss/components/burger-menu/burger-menu.scss
@@ -1,5 +1,6 @@
 .burger-menu {
   position: relative;
+  z-index: 1;
   height: 28px;
   width: 72px;
   cursor: pointer;
