--- a/scss/components/header/header.scss
+++ b/scss/components/header/header.scss
@@ -8,7 +8,6 @@
   height: 97px;
   color: $secondary-color;
   background-color: $primary-color;
-  z-index: 2;
 
   &__container {
     height: 100%;
